add debug informations #2